--- a/openapi/adminusers_spec.yaml
+++ b/openapi/adminusers_spec.yaml
@@ -100,8 +100,8 @@ paths:
             schema:
               $ref: '#/components/schemas/InviteOtpRequest'
       responses:
-        "200":
-          description: OK
+        "204":
+          description: No content
         "400":
           description: Invalid payload
       summary: Resend OTP
@@ -144,7 +144,7 @@ paths:
             schema:
               $ref: '#/components/schemas/InviteUserRequest'
       responses:
-        "200":
+        "201":
           content:
             application/json:
               schema:
