--- a/openapi/adminusers_spec.yaml
+++ b/openapi/adminusers_spec.yaml
@@ -1080,8 +1080,8 @@ paths:
             schema:
               $ref: '#/components/schemas/InviteValidateOtpRequest'
       responses:
-        "200":
-          description: OK
+        "204":
+          description: No content
         "400":
           description: Invalid payload
       summary: Validates OTP for the invite
