--- a/openapi/adminusers_spec.yaml
+++ b/openapi/adminusers_spec.yaml
@@ -98,12 +98,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/InviteOtpRequest'
+              $ref: '#/components/schemas/ResendOtpRequest'
       responses:
-        "200":
-          description: OK
-        "400":
-          description: Invalid payload
+        "204":
+          description: No content
+        "404":
+          description: Invite not found
+        "422":
+          description: Missing required fields or invalid values
       summary: Resend OTP
       tags:
       - Invites
@@ -145,7 +147,7 @@ paths:
                 $ref: '#/components/schemas/Invite'
           description: Created
         "404":
-          description: Not found
+          description: Service or role not found
         "422":
           description: Missing required fields or invalid values
       summary: Creates an invitation to allow a new team member to join an existing
@@ -1071,8 +1073,10 @@ paths:
       responses:
         "204":
           description: No content
-        "400":
-          description: Invalid payload
+        "404":
+          description: Invite not found
+        "422":
+          description: Missing required fields or invalid values
       summary: Validates OTP for the invite
       tags:
       - Invites
@@ -1184,22 +1188,6 @@ components:
         user_external_id:
           type: string
           example: 287cg75v3737
-    InviteOtpRequest:
-      type: object
-      properties:
-        code:
-          type: string
-          example: d02jddeib0lqpsir28fbskg9v0rv
-          maxLength: 255
-        password:
-          type: string
-          example: a-password
-        telephone_number:
-          type: string
-          example: "440787654534"
-      required:
-      - code
-      - telephone_number
     InviteServiceRequest:
       type: object
       properties:
@@ -1242,13 +1230,13 @@ components:
           type: string
           example: d02jddeib0lqpsir28fbskg9v0rv
           maxLength: 255
-        otp_code:
+        otp:
           type: integer
           format: int32
           example: 123456
       required:
       - code
-      - otp_code
+      - otp
     JsonNode:
       type: object
     Link:
@@ -1314,6 +1302,19 @@ components:
         name:
           type: string
           example: tokens:delete
+    ResendOtpRequest:
+      type: object
+      properties:
+        code:
+          type: string
+          example: d02jddeib0lqpsir28fbskg9v0rv
+          maxLength: 255
+        telephone_number:
+          type: string
+          example: +440787654534
+      required:
+      - code
+      - telephone_number
     Role:
       type: object
       properties:
