--- a/openapi/adminusers_spec.yaml
+++ b/openapi/adminusers_spec.yaml
@@ -229,12 +229,17 @@ paths:
         required: true
         schema:
           type: string
+      requestBody:
+        content:
+          '*/*':
+            schema:
+              $ref: '#/components/schemas/CompleteInviteRequest'
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/InviteCompleteResponse'
+                $ref: '#/components/schemas/CompleteInviteResponse'
           description: OK
         "404":
           description: Not found
@@ -1119,6 +1124,25 @@ paths:
       - Invites
 components:
   schemas:
+    CompleteInviteRequest:
+      type: object
+      properties:
+        second_factor:
+          type: string
+          enum:
+          - sms
+          - app
+    CompleteInviteResponse:
+      type: object
+      properties:
+        invite:
+          $ref: '#/components/schemas/Invite'
+        service_external_id:
+          type: string
+          example: 89wi6il2364328
+        user_external_id:
+          type: string
+          example: 287cg75v3737
     CreateUserRequest:
       type: object
       properties:
@@ -1214,17 +1238,6 @@ components:
           example: service
         user_exist:
           type: boolean
-    InviteCompleteResponse:
-      type: object
-      properties:
-        invite:
-          $ref: '#/components/schemas/Invite'
-        service_external_id:
-          type: string
-          example: 89wi6il2364328
-        user_external_id:
-          type: string
-          example: 287cg75v3737
     InviteServiceRequest:
       type: object
       properties:
