--- a/openapi/adminusers_spec.yaml
+++ b/openapi/adminusers_spec.yaml
@@ -176,6 +176,43 @@ paths:
       summary: Find invite for invite code
       tags:
       - Invites
+    patch:
+      operationId: updateInvite
+      parameters:
+      - example: d02jddeib0lqpsir28fbskg9v0rv
+        in: path
+        name: code
+        required: true
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: string
+              example:
+              - op: replace
+                path: telephone_number
+                value: +441134960000
+              - op: replace
+                path: password
+                value: a-password
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Invite'
+          description: OK
+        "400":
+          description: Bad request
+        "404":
+          description: Invite not found
+        "422":
+          description: Missing required fields or invalid values
+      summary: Update an invite
+      tags:
+      - Invites
   /v1/api/invites/{code}/complete:
     post:
       description: "In the case of a user invite, this resource will assign the new\
