PP-10038: Fix casing issue in openapi.yaml
PR #1724 added CompleteInviteRequest, and in the openapi.yaml that was generated for that change, the SecondFactorMethod enum constants were serialised as lowercased strings, but they should be uppercase.  This has now been fixed in the code and the openapi file will be generated correctly going forwards.

--- a/openapi/adminusers_spec.yaml
+++ b/openapi/adminusers_spec.yaml
@@ -1130,8 +1130,8 @@ components:
         second_factor:
           type: string
           enum:
-          - sms
-          - app
+          - SMS
+          - APP
     CompleteInviteResponse:
       type: object
       properties:
@@ -1605,8 +1605,8 @@ components:
         second_factor:
           type: string
           enum:
-          - sms
-          - app
+          - SMS
+          - APP
           example: SMS
         service_roles:
           type: array
