PP-10052 Include otp_key in Invite response
Include the otp_key in API responses that return an Invite. This is so
that the key can be displayed on the selfservice page to set up an
authenticator app.

--- a/openapi/adminusers_spec.yaml
+++ b/openapi/adminusers_spec.yaml
@@ -1224,6 +1224,9 @@ components:
         inviteLink:
           type: string
           writeOnly: true
+        otp_key:
+          type: string
+          example: ABC123
         password_set:
           type: boolean
           example: false
