PP-10199 Rename variable to GOV_BANKING_MOTO_OPTION_COMPLETED

--- a/openapi/adminusers_spec.yaml
+++ b/openapi/adminusers_spec.yaml
@@ -1422,7 +1422,7 @@ components:
           - CHOSEN_PSP_SMARTPAY
           - CHOSEN_PSP_EPDQ
           - CHOSEN_PSP_GOV_BANKING_WORLDPAY
-          - CHOSEN_GOV_BANKING_MOTO
+          - GOV_BANKING_MOTO_OPTION_COMPLETED
           - TERMS_AGREED_STRIPE
           - TERMS_AGREED_WORLDPAY
           - TERMS_AGREED_SMARTPAY
