--- a/openapi/adminusers_spec.yaml
+++ b/openapi/adminusers_spec.yaml
@@ -91,6 +91,51 @@ paths:
       summary: List invites for a service
       tags:
       - Invites
+  /v1/api/invites/create-invite-to-join-service:
+    post:
+      operationId: createInviteToJoinService
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateInviteToJoinServiceRequest'
+      responses:
+        "201":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Invite'
+          description: Created
+        "404":
+          description: Service or role not found
+        "422":
+          description: Missing required fields or invalid values
+      summary: Creates an invitation to allow a new team member to join an existing
+        service.
+      tags:
+      - Invites
+  /v1/api/invites/create-self-registration-invite:
+    post:
+      operationId: createSelfRegistrationInvite
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateSelfRegistrationInviteRequest'
+      responses:
+        "201":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Invite'
+          description: Created
+        "403":
+          description: The email is not an allowed public sector email address
+        "422":
+          description: Missing required fields or invalid values
+      summary: Creates an invitation to allow self provisioning new service with Pay
+      tags:
+      - Invites
   /v1/api/invites/service:
     post:
       operationId: createServiceInvite
@@ -98,7 +143,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/InviteServiceRequest'
+              $ref: '#/components/schemas/CreateSelfRegistrationInviteRequest'
       responses:
         "201":
           content:
@@ -120,7 +165,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/InviteUserRequest'
+              $ref: '#/components/schemas/CreateInviteToJoinServiceRequest'
       responses:
         "201":
           content:
@@ -1138,6 +1183,35 @@ components:
         user_external_id:
           type: string
           example: 287cg75v3737
+    CreateInviteToJoinServiceRequest:
+      type: object
+      properties:
+        email:
+          type: string
+          example: example@example.gov.uk
+        role_name:
+          type: string
+          example: view-only
+        sender:
+          type: string
+          description: User external ID
+          example: d0wksn12nklsdf1nd02nd9n2ndk
+        service_external_id:
+          type: string
+          example: dj2jkejke32jfhh3
+      required:
+      - email
+      - role_name
+      - sender
+      - service_external_id
+    CreateSelfRegistrationInviteRequest:
+      type: object
+      properties:
+        email:
+          type: string
+          example: example@example.gov.uk
+      required:
+      - email
     CreateUserRequest:
       type: object
       properties:
@@ -1236,35 +1310,6 @@ components:
           example: service
         user_exist:
           type: boolean
-    InviteServiceRequest:
-      type: object
-      properties:
-        email:
-          type: string
-          example: example@example.gov.uk
-      required:
-      - email
-    InviteUserRequest:
-      type: object
-      properties:
-        email:
-          type: string
-          example: example@example.gov.uk
-        role_name:
-          type: string
-          example: view-only
-        sender:
-          type: string
-          description: User external ID
-          example: d0wksn12nklsdf1nd02nd9n2ndk
-        service_external_id:
-          type: string
-          example: dj2jkejke32jfhh3
-      required:
-      - email
-      - role_name
-      - sender
-      - service_external_id
     InviteValidateOtpRequest:
       type: object
       properties:
