PP-10338: Add `isInviteToJoinService` to `Invite` object
Endpoints which return an invite will now include this flag, which will soon be used instead of the `type` field, so that we can delete the latter.

--- a/openapi/adminusers_spec.yaml
+++ b/openapi/adminusers_spec.yaml
@@ -1293,6 +1293,9 @@ components:
         inviteLink:
           type: string
           writeOnly: true
+        invite_to_join_service:
+          type: boolean
+          example: true
         otp_key:
           type: string
           example: ABC123
