PP-10338: Rename invite_to_join_service flag
`Invite#isInviteToJoinService` was getting exported as `invite_to_join_service`, which reads a bit strangely as 'invite' sounds like a verb; export it as `is_invite_to_join_service` instead.

--- a/openapi/adminusers_spec.yaml
+++ b/openapi/adminusers_spec.yaml
@@ -1248,7 +1248,7 @@ components:
         inviteLink:
           type: string
           writeOnly: true
-        invite_to_join_service:
+        is_invite_to_join_service:
           type: boolean
           example: true
         otp_key:
