PP-10888 Add username to forgotten password response
Include a "username" property in the JSON response to a request to
/v1/api/forgotten-passwords/{code} because it’s useful for
selfservice to know this when displaying the page that lets the
user enter their new password as part of the forgotten password
flow.

--- a/openapi/adminusers_spec.yaml
+++ b/openapi/adminusers_spec.yaml
@@ -1215,6 +1215,9 @@ components:
         user_external_id:
           type: string
           example: 12e3eccfab284ae5bc1108e9c0456ba7
+        username:
+          type: string
+          example: username@example.gov.uk
     GovUkPayAgreement:
       type: object
       properties:
