--- a/src/main/resources/config/config.yaml
+++ b/src/main/resources/config/config.yaml
@@ -23,7 +23,7 @@ logging:
       customFields:
         container: "adminusers"
         environment: ${ENVIRONMENT}
-    - type: sentry
+    - type: pay-dropwizard-3-sentry
       threshold: ERROR
       dsn: ${SENTRY_DSN:-https://example.com@dummy/1}
       environment: ${ENVIRONMENT}
