--- a/src/main/resources/config/config.yaml
+++ b/src/main/resources/config/config.yaml
@@ -139,3 +139,5 @@ ledgerBaseURL: ${LEDGER_URL}
 
 restClientConfig:
   disabledSecureConnection: ${DISABLE_INTERNAL_HTTPS:-false}
+
+ecsContainerMetadataUriV4: ${ECS_CONTAINER_METADATA_URI_V4:-}
