PP-11327 remove username from create user
We no longer store username, we rely on the user's email. It'd be silly to expect username when creating a new user.

- remove username from user creation requests
- refactor code accordingly
- refactor tests accordingly

--- a/openapi/adminusers_spec.yaml
+++ b/openapi/adminusers_spec.yaml
@@ -744,7 +744,7 @@ paths:
         "400":
           description: Invalid payload
         "409":
-          description: User with username already exists
+          description: User with email already exists
         "500":
           description: Internal server error
       summary: Create new user
