PP-11652 Fix Dependabot config for ignoring Dropwizard 4
Whoops.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@ updates:
     interval: daily
     time: "03:00"
   ignore:
-    - dependency-name: "dropwizard-dependencies"
+    - dependency-name: "io.dropwizard:dropwizard-dependencies"
       versions:
         - ">= 4"
   open-pull-requests-limit: 10
