--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <dropwizard.version>3.0.2</dropwizard.version>
         <hamcrest.version>2.2</hamcrest.version>
         <pact.version>3.6.15</pact.version>
         <pay-java-commons.version>1.0.20231023150042</pay-java-commons.version>
@@ -26,7 +25,7 @@
             <dependency>
                 <groupId>io.dropwizard</groupId>
                 <artifactId>dropwizard-dependencies</artifactId>
-                <version>${dropwizard.version}</version>
+                <version>3.0.2</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -289,7 +288,7 @@
         <dependency>
             <groupId>io.dropwizard.modules</groupId>
             <artifactId>dropwizard-testing-junit4</artifactId>
-            <version>${dropwizard.version}</version>
+            <version>3.0.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
