--- a/src/main/resources/config/config.yaml
+++ b/src/main/resources/config/config.yaml
@@ -142,3 +142,4 @@ ecsContainerMetadataUriV4: ${ECS_CONTAINER_METADATA_URI_V4:-}
 expungeAndArchiveDataConfig:
   expungeAndArchiveHistoricalDataEnabled: ${EXPUNGE_AND_ARCHIVE_HISTORICAL_DATA_ENABLED:-false}
   expungeUserDataAfterDays: ${EXPUNGE_USER_DATA_AFTER_DAYS:-1460}
+  archiveServicesAfterDays: ${EXPUNGE_ARCHIVE_SERVICES_AFTER_DAYS:-2555}
