PP-11279: Send service archived event to connector task queue

--- a/src/test/resources/config/test-it-config.yaml
+++ b/src/test/resources/config/test-it-config.yaml
@@ -116,6 +116,7 @@ sqs:
   eventSubscriberQueueUrl: ${AWS_SQS_EVENT_SUBSCRIBER_QUEUE_URL}
   messageMaximumWaitTimeInSeconds: ${AWS_SQS_MESSAGE_MAXIMUM_WAIT_TIME_IN_SECONDS:-1}
   messageMaximumBatchSize: ${AWS_SQS_MESSAGE_MAXIMUM_BATCH_SIZE:-10}
+  connectorTaskQueueUrl: ${AWS_SQS_CONNECTOR_TASKS_QUEUE_URL}
 
 eventSubscriberQueue:
   eventSubscriberQueueEnabled: ${EVENT_SUBSCRIBER_QUEUE_ENABLED:-false}
@@ -135,3 +136,6 @@ expungeAndArchiveDataConfig:
   expungeAndArchiveHistoricalDataEnabled: ${EXPUNGE_AND_ARCHIVE_HISTORICAL_DATA_ENABLED:-true}
   expungeUserDataAfterDays: ${EXPUNGE_USER_DATA_AFTER_DAYS:-1460}
   archiveServicesAfterDays: ${EXPUNGE_ARCHIVE_SERVICES_AFTER_DAYS:-2555}
+
+connectorTaskQueueConfig:
+  failedMessageRetryDelayInSeconds: ${TASK_QUEUE_MESSAGE_RETRY_FAILED_IN_SECONDS:-1}
