PP-13030: Use CreateServiceRequest pojo instead of JsonNode (#2653)
* PP-13030: Use CreateServiceRequest pojo instead of JsonNode

Following the general pattern in most of our Dropwizard codebases, we want to avoid
JsonNode as the POST request body where possible so we can advantage of using
javax Validation constraints.

It is also generally agreed that using hard coded URL strings makes for
easier-to-read code.

Added a few more test cases in ServiceResourceCreateIT to reflect the pact
tests between selfservice and adminusers:
* [a valid create service request with empty object](https://github.com/alphagov/pay-selfservice/blob/b2053a1049bc28813e8e7363245ad546ef19b675/test/pact/adminusers-client/service/create-service.pact.test.js#L50)
* [a valid create service request with gateway account ids](https://github.com/alphagov/pay-selfservice/blob/b2053a1049bc28813e8e7363245ad546ef19b675/test/pact/adminusers-client/service/create-service.pact.test.js#L85C31-L85C86)
* [a valid create service request with service name](https://github.com/alphagov/pay-selfservice/blob/b2053a1049bc28813e8e7363245ad546ef19b675/test/pact/adminusers-client/service/create-service.pact.test.js#L124)

--- a/openapi/adminusers_spec.yaml
+++ b/openapi/adminusers_spec.yaml
@@ -343,6 +343,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/Service'
           description: Created
+        "400":
+          description: Service name keys must be one of 'en' (English) or 'cy' (Welsh)
         "409":
           description: Gateway account IDs provided has already been assigned to another
             service
@@ -1184,6 +1186,17 @@ components:
           example: example@example.gov.uk
       required:
       - email
+    CreateServiceRequest:
+      type: object
+      properties:
+        gateway_account_ids:
+          type: array
+          items:
+            type: string
+        service_name:
+          type: object
+          additionalProperties:
+            type: string
     CreateUserRequest:
       type: object
       properties:
