PP-13030: Refactor method that assigns service and role to user
This commit implements these improvements:
- Use Java class representation of a POST body instead of JsonNode
- Use provided dropwizard and hibernate validation rather than custom validation

--- a/openapi/adminusers_spec.yaml
+++ b/openapi/adminusers_spec.yaml
@@ -1042,7 +1042,7 @@ paths:
       - Users
   /v1/api/users/{userExternalId}/services:
     post:
-      operationId: createServiceRole
+      operationId: assignServiceAndRoleToUser
       parameters:
       - example: 93ba1ec4ed6a4238a59f16ad97b4fa12
         in: path
@@ -1152,6 +1152,17 @@ paths:
       - Invites
 components:
   schemas:
+    AssignServiceAndRoleRequest:
+      type: object
+      properties:
+        role_name:
+          type: string
+        service_external_id:
+          type: string
+        valid_role_name:
+          type: boolean
+      required:
+      - service_external_id
     CompleteInviteRequest:
       type: object
       properties:
