PP-13877 Add telephone_number and password to CreateInviteRequest

--- a/openapi/adminusers_spec.yaml
+++ b/openapi/adminusers_spec.yaml
@@ -1216,6 +1216,12 @@ components:
         email:
           type: string
           example: example@example.gov.uk
+        password:
+          type: string
+          example: password123!
+        telephone_number:
+          type: string
+          example: 070xxxxxxxx
       required:
       - email
     CreateServiceRequest:
