PP-13877 Save User MFAs to separate table when invite completed
 - Creates new MFA records after the invite is completed.
 - Doesn't change setting fields on user entity

--- a/openapi/adminusers_spec.yaml
+++ b/openapi/adminusers_spec.yaml
@@ -1171,6 +1171,7 @@ components:
           enum:
           - SMS
           - APP
+          - BACKUP_CODE
     CompleteInviteResponse:
       type: object
       properties:
@@ -1660,6 +1661,7 @@ components:
           enum:
           - SMS
           - APP
+          - BACKUP_CODE
           example: SMS
         service_roles:
           type: array
