PP-13991 refactor to use vanilla SentryAppenderFactory
import `SentryAppenderFactory` from dropwizard-sentry.

--- a/src/test/resources/config/test-it-config.yaml
+++ b/src/test/resources/config/test-it-config.yaml
@@ -18,7 +18,7 @@ logging:
       target: stdout
       customFields:
         container: "adminusers"
-    - type: pay-dropwizard-4-sentry
+    - type: sentry
       threshold: ERROR
       dsn: ${SENTRY_DSN:-https://example.com@dummy/1}
       environment: ${ENVIRONMENT}
